# CodepointIterator

./: CMakeLists.txt  Makefile  README.md  test.cc
src/: codepoint_iterator.cc  codepoint_iterator.h  utility.cc  utility.h
